# openENV

./: .gitattributes  Dockerfile  FIXES_APPLIED.md  PRESUBMISSION_CHECKLIST.md  README.md  ROOT_CAUSE_ANALYSIS.md  SUBMISSION_FIX_GUIDE.md  app.py  check_tasks.py  comprehensive_test.py  diagnose_eval.py  docker-compose.yml  env.py  final_eval.py  final_eval_raw.py  final_eval_success.py  generators.py  grader.py  gym_wrapper.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  simulate_validator.py  test_endpoints.py  test_graders.py  train_ppo.py  vecnormalize.pkl
.github/workflows/: docker-publish.yml
logs/eval/: evaluations.npz
logs/tb/MaskablePPO_1/: events.out.tfevents.1777396139.Aditya.6684.0  events.out.tfevents.1777469642.Aditya.18560.0
logs/tb/MaskablePPO_2/: events.out.tfevents.1777396204.Aditya.24100.0  events.out.tfevents.1777472876.Aditya.932.0
server/: app.py
src/: env.py  grader.py
src/tasks/: generators.py
